Partial PUT (PATCH) (#265)
* add PATCH for /users/{id} and /rooms/{id}
