# server/docs/api/openapi-release-0.0.1.yaml
@@ -84,6 +84,31 @@ paths:
       tags:
         - rooms
       summary: Изменение информации о комнате
+    patch:
+      operationId: editRoomPartiallyById
+      responses:
+        200:
+          content:
+            text/plain:
+              schema:
+                $ref: "#/components/schemas/Ok"
+          description: Информация о комнате изменена
+        400:
+          $ref: "#/components/responses/BadRequest"
+        401:
+          $ref: "#/components/responses/Unauthorized"
+        403:
+          $ref: "#/components/responses/Forbidden"
+        500:
+          $ref: "#/components/responses/ServerError"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/NewRoomWithNull"
+      tags:
+        - rooms
+      summary: Частичное изменение информации о комнате
     delete:
       operationId: deleteRoomById
       summary: Удаление комнаты
@@ -168,6 +193,31 @@ paths:
           application/json:
             schema:
               $ref: "#/components/schemas/UpdateUserInfo"
+      tags:
+        - users
+    patch:
+      operationId: editUserByIdPartially
+      summary: Частичная изменение информации о пользователе
+      responses:
+        200:
+          description: Информация о пользователе изменена
+          content:
+            text/plain:
+              schema:
+                $ref: "#/components/schemas/Ok"
+        400:
+          $ref: "#/components/responses/BadRequest"
+        401:
+          $ref: "#/components/responses/Unauthorized"
+        403:
+          $ref: "#/components/responses/Forbidden"
+        500:
+          $ref: "#/components/responses/ServerError"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UpdateUserInfoWithNull"
       tags:
         - users
     delete:
@@ -529,6 +579,15 @@ components:
       example:
         name: "1001"
         description: "Симметричная комната"
+    NewRoomWithNull:
+      type: object
+      properties:
+        name:
+          type: string
+        description:
+          type: string
+      example:
+        name: "1234"
     RoomInfo:
       type: object
       required:
@@ -604,6 +663,13 @@ components:
       required:
         - username
         - email
+      properties:
+        username:
+          type: string
+        email:
+          type: string
+    UpdateUserInfoWithNull:
+      type: object
       properties:
         username:
           type: string
