# server/src/main/kotlin/org/tod87et/roomkn/server/models/users/UpdateUserInfoWithNull.kt
@@ -1,0 +1,9 @@
+package org.tod87et.roomkn.server.models.users
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class UpdateUserInfoWithNull(
+    val username: String? = null,
+    val email: String? = null,
+)
